compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__let_assert__non_string_message.snap
---
source: compiler-core/src_refactored/__core/type_/tests/let_assert.rs
assertion_line: 106
expression: let assert 1 = 2 as 3
snapshot_kind: text
---
----- SOURCE CODE
let assert 1 = 2 as 3

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:21
  │
1 │ let assert 1 = 2 as 3
  │                     ^

Expected type:

    String

Found type:

    Int
